<resources>
    <string name="app_name">ATM Consultoria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ATM Consultoria</string>
    <string name="nav_header_subtitle">atendimento@atmconsultoria.com.br</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_principal">Principal</string>
    <string name="menu_servicos">Serviços</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_contato">Contato</string>
    <string name="menu_sobre">Sobre</string>
    <string name="titulo_servicos">Sistema de gestão de qualidade</string>
    <string name="subtitulo_servicos">Indicadores de desempenho</string>
    <string name="description_servicos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in eleifend magna, ut porttitor risus. Sed varius, lectus eu placerat molestie, eros mi maximus sem, nec pharetra felis neque vitae ligula. Donec ac imperdiet lectus, eget volutpat erat. Etiam sodales at augue a euismod. Sed nec arcu metus. Morbi eu est nulla. Integer iaculis purus nec tortor fermentum pulvinar. Sed euismod condimentum vestibulum.</string>
    <string name="descricao_subtitulo_servicos">Donec ac leo vel ex placerat eleifend sed consectetur turpis. Suspendisse id nisl eget leo viverra tempus. Pellentesque mattis augue eget odio pellentesque, sollicitudin commodo nisi iaculis. Suspendisse eget leo a leo convallis porta elementum ut nisl. Nam eget lobortis elit, id laoreet magna. Nulla luctus magna in elit blandit, facilisis mollis ipsum tristique. Curabitur at efficitur mi. Etiam placerat, neque at eleifend aliquam, tortor dolor porta ipsum, eget tempor purus purus eget urna.</string>
    <string name="titulo_clientes">Clientes</string>
    <string name="descricao_clientes">Nam consequat neque tortor, laoreet tincidunt diam ultrices sed. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse sollicitudin quis arcu non lobortis. Quisque suscipit tempor orci sed porta. Mauris facilisis mauris eu ullamcorper aliquam. Etiam porttitor dui dolor, eu rutrum lacus semper vel. Aliquam dapibus, nisi eu pharetra congue, elit arcu hendrerit nulla, non malesuada purus lectus volutpat ante. Praesent sit amet mollis dolor. Nunc et sodales nisl.</string>
    <string name="subtitulo1_clientes">Cielo</string>
    <string name="subtitulo2_clientes">Braskem</string>
    <string name="subtitulo3_clientes">Gerdau</string>
    <string name="subtitulo4_clientes">Embraer</string>
    <string name="subtitulo5_clientes">Natura</string>
    <string name="subtitulo6_clientes">Lojas Americanas</string>
    <string name="descricao_sobre">A ATM Consultoria tem como missão apoiar organizações que desejam alcançar o sucesso através da excelência em gestão e da busca pela qualidade.</string>
</resources>
