<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_clientes"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descricao_clientes" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_keyboard_arrow"
        android:text="@string/subtitulo1_clientes"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_keyboard_arrow"
        android:text="@string/subtitulo4_clientes"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_keyboard_arrow"
        android:text="@string/subtitulo2_clientes"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_keyboard_arrow"
        android:text="@string/subtitulo5_clientes"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_keyboard_arrow"
        android:text="@string/subtitulo3_clientes"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_keyboard_arrow"
        android:text="@string/subtitulo6_clientes"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_slideshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp" />
</LinearLayout>